tests/invalid_inputs/sema/class_method_call_ptr_object.cpp

struct S {
	int foo(int a) {return a;}
}

int main() {
	S s;
	return s->foo(42);
}
